Done with Featured Product section

--- a/src/Common.css
+++ b/src/Common.css
@@ -10,3 +10,31 @@
 .c-item {
     height: 50vh!important;
 }
+
+/************** Featured Products CSS *************/
+#featured_products .fp-top {
+    display: flex;
+    gap: 2%;
+}
+#featured_products .fp-top .fp-top-left {
+    width: 49%;
+    background-image: url("./images/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#featured_products .fp-top .fp-top-right {
+    width: 49%;
+    background-image: url("./images/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+#featured_products .fp-bottom {
+    background-image: url("./images/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bg-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+}
