--- a/src/Common.css
+++ b/src/Common.css
@@ -6,7 +6,7 @@
     gap: 2rem;
     padding: 0 5%;
 }
-/*Carousel */
+/*****************Carousel *************/
 .c-item {
     height: 70vh!important;
 }
